tests/typechecker/pass/023-do-while.hyg
do println("Hygge") while true;
do println("Hygge") while false;


let mutable x = 0;

let y = 4 + (do {
    x <- x + 1
} while (x < 5));

do println("Hygge") while (true and x < 10)
