tests/typechecker/fail/025-array-elem-index.hyg
let n = readInt();
let arr: array {int} = array(n, 40 + 2);

let mutable i = 0;
while (i < arrayLength(arr)) do {
    arrayElem(arr, i) <- arrayElem(arr, struct { name = "invalid"}) + i;
    i <- i + 1
}; ()
